--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,11 @@
     <main class="container-welcome">
         <section class="welcome">
             <label>Agrega tu nombre</label>
-            <input type="text" required>
-            <a><button>Jugar</button></a>
+            <input type="text" id="input" required>
+            <button id="empezar">Jugar</button>
         </section>
     </main>
+    <script src="./index.js"></script>
 </body>
 
 </html>
