--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shrek-Quizzy</title>
     <link rel="stylesheet" href="/src/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   
+
 </head>
 
 <body>
@@ -18,7 +21,7 @@
                 <label for="input">Ingresa tu nombre:</label>
                 <input type="text" id="input" placeholder="Ejemplo: Shrek" required>
               </div>
-            <button id="empezar">Jugar</button>
+            <button id="empezar">Jugar </button>
         </section>
     </main>
     <script src="./index.js"></script>
