--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shrek-Quizzy</title>
-    <link rel="stylesheet" href="/src/index.css">
+    <link rel="stylesheet" href="/src/bienvenida.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-   
 
 </head>
 
