--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             <button id="empezar">Jugar </button>
         </section>
     </main>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
