--- a/src/trivia.html
+++ b/src/trivia.html
@@ -7,10 +7,11 @@
    <title>trivia</title>
    <link rel="stylesheet" href="trivia.css">
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM Sans|Abel|Poppins|" />
-
+   <!-- Agregar Bootstrap CSS -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 
-<body>
+<body style="background-color:  #7BB661;">
 
    <main class="container-questions">
       <article class="container-form">
@@ -149,16 +150,49 @@
                </section>
             </div>
             <div class="container-btn">
-               <button id="enviar">Enviar</button>
+               <button id="enviar" type="button" data-bs-toggle="modal"
+                 class="btn-custom " data-bs-target="#miModal">Enviar</button>
             </div>
          </form>
       </article>
    </main>
 
-   <p id="totalCorrects"></p>
-   <p id="resultCorrects"> </p>
-   <p id="resultIncorrects"></p>
-   <script type="module" src="trivia.js"></script>
+   <!-- Modal -->
+   <!-- Modal -->
+   <div class="modal fade" id="miModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+      aria-labelledby="miModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+         <div class="modal-content">
+            <div class="modal-header">
+               <h1 class="modal-title fs-5" id="miModalLabel">Resultados de la Trivia de Shrek</h1>
+               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+
+               <p id="totalCorrects"></p>
+               <p id="resultCorrects"></p>
+               <p id="resultIncorrects"></p>
+            </div>
+            <div class="modal-footer">
+               <button type="button" class="btn-custom" data-bs-dismiss="modal">Cerrar</button>
+               <!-- <button type="button" class="btn btn-primary">Understood</button> -->
+            </div>
+         </div>
+      </div>
+   </div>
+
+
+
+
+   <script src="trivia.js"></script>
+   <!-- jQuery -->
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+   <!-- Popper.js -->
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+
+   <!-- Bootstrap -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
 </body>
 
