--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://i.pinimg.com/564x/ad/8c/61/ad8c6188d76b17c443ab61633b3533be.jpg">
     <title>Shrek-Quizzy</title>
     <link rel="stylesheet" href="./bienvenida.css">
+    <link rel="icon"  href="./img/icon-nav.png">
+    <!-- link de enlace para la libreria de font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
@@ -18,10 +21,19 @@
             <div class="input-container">
                 <label for="input">Ingresa tu nombre:</label>
                 <input type="text" id="input" placeholder="Ejemplo: Shrek" required>
-              </div>
-            <button id="empezar" class="btn-custom">Jugar </button>
+            </div>
+            <button id="empezar" class="btn-custom">Comenzar la trivia</button>
         </section>
     </main>
+      <footer>
+  
+    <div class="footer-right">
+      <p>© 2023 | Made with <i class="fas fa-heart"></i> by Fabiola Flores </p>
+    </div>
+    <div class="footer-left">
+        <a href="https://github.com/kellyfabiolafc/trivia-shrek" target="_blank"><i class="fab fa-github"></i></a>
+      </div>
+  </footer>
     <script type="module" src="./index.js"></script>
 </body>
 
