--- a/trivia.html
+++ b/trivia.html
@@ -22,7 +22,7 @@
             <div class="questions-father">
                <section class="container-p1">
                   <picture class="container-answer">
-                     <img src='./img/shrek.jpg'>
+                     <img src='./img/shrek.jpg'  alt="Shrek, el famoso personaje verde de la película animada">>
                   </picture>
                   <div class="container-answer">
                      <p class="p1">¿Cuál es el nombre del protagonista verde de la película?
@@ -45,7 +45,7 @@
                </section>
                <section class="container-p2">
                   <picture class="container-answer">
-                     <img src='./img/burro.jfif'>
+                     <img src='./img/burro.jfif' alt="Burro, el mejor amigo de shrek">
                   </picture>
                   <div class="container-answer">
                      <p class="p2">¿Qué animal es el mejor amigo de Shrek?
@@ -71,7 +71,7 @@
                </section>
                <section class="container-p3">
                   <picture class="container-answer">
-                     <img src='./img/fiona.jfif'>
+                     <img src='./img/fiona.jfif' alt="La princesa Fiona que el personaje verde debe rescatar">
                   </picture>
                   <div class="container-answer">
                      <p class="p3">¿Cómo se llama la princesa que Shrek debe rescatar?
@@ -98,7 +98,7 @@
                </section>
                <section class="container-p4">
                   <picture class="container-answer">
-                     <img src='./img/que-espejo.jpg'>
+                     <img src='./img/que-espejo.jpg' alt="Expresión de incertidumbre ">
                   </picture>
                   <div class="container-answer">
                      <p class="p4">¿Cuál es el nombre del burro parlante en la película? </p>
@@ -124,7 +124,7 @@
                </section>
                <section class="container-p5">
                   <picture class="container-answer">
-                     <img src='./img/pantano.jpg'>
+                     <img src="./img/pantano.jpg" alt="Imagen de un hermoso pantano rodeado de vegetación y agua tranquila">
                   </picture>
                   <div class="container-answer">
                      <p class="p5">¿Qué tipo de criatura gobierna el reino donde vive Shrek?</p>
@@ -151,7 +151,7 @@
             </div>
             <div class="container-btn">
                <button id="enviar" type="button" data-bs-toggle="modal"
-                 class="btn-custom " data-bs-target="#miModal">Enviar</button>
+                 class="btn-custom " data-bs-target="#miModal">Enviar respuestas</button>
             </div>
          </form>
       </article>
