--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header-welcome">
         <h1><strong class="ear">S</strong>hrek-Quizzy</h1>
     </header>
-    <main class="container-welcome">
+    <main class="container-welcome" style="display: flex;">
         <section class="welcome">
             <div class="input-container">
                 <label for="input">Ingresa tu nombre:</label>
