--- a/trivia.html
+++ b/trivia.html
@@ -22,7 +22,7 @@
             <div class="questions-father">
                <section class="container-p1">
                   <picture class="container-answer">
-                     <img src='./img/shrek.jpg'  alt="Shrek, el famoso personaje verde de la película animada">>
+                     <img src='./img/shrek.jpg' alt="Shrek, el famoso personaje verde de la película animada">>
                   </picture>
                   <div class="container-answer">
                      <p class="p1">¿Cuál es el nombre del protagonista verde de la película?
@@ -124,7 +124,8 @@
                </section>
                <section class="container-p5">
                   <picture class="container-answer">
-                     <img src="./img/pantano.jpg" alt="Imagen de un hermoso pantano rodeado de vegetación y agua tranquila">
+                     <img src="./img/pantano.jpg"
+                        alt="Imagen de un hermoso pantano rodeado de vegetación y agua tranquila">
                   </picture>
                   <div class="container-answer">
                      <p class="p5">¿Qué tipo de criatura gobierna el reino donde vive Shrek?</p>
@@ -138,11 +139,11 @@
                            <label>b) Humanos </label>
                         </div>
                         <div class="input-group">
-                           <input type="radio" value="3" name="p5" />
+                           <input type="radio" value="3" value="Ogrps" name="p5" />
                            <label>c) Ogros</label>
                         </div>
                         <div class="input-group">
-                           <input type="radio" value="1" name="p5" />
+                           <input type="radio" value="1"  name="p5" />
                            <label>d) Duendes</label>
                         </div>
                      </div>
@@ -150,8 +151,8 @@
                </section>
             </div>
             <div class="container-btn">
-               <button id="enviar" type="button" data-bs-toggle="modal"
-                 class="btn-custom " data-bs-target="#miModal">Enviar respuestas</button>
+               <button id="enviar" type="button" data-bs-toggle="modal" class="btn-custom "
+                  data-bs-target="#miModal">Enviar respuestas</button>
             </div>
          </form>
       </article>
