end commit - add responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="https://i.pinimg.com/564x/ad/8c/61/ad8c6188d76b17c443ab61633b3533be.jpg">
+    <meta name="description"
+        content="Shrek-Quizzy es un divertido juego de preguntas basado en Shrek. ¡Demuestra cuánto sabes sobre esta película animada!">
+    <meta name="keywords" content="Shrek, juego de preguntas, película animada, diversión, entretenimiento">
+    <meta name="author" content="Fabiola Flores">
+
     <title>Shrek-Quizzy</title>
     <link rel="stylesheet" href="./bienvenida.css">
     <link rel="icon" href="./img/icon-nav.png">
