--- a/trivia.html
+++ b/trivia.html
@@ -22,7 +22,7 @@
             <div class="questions-father">
                <section class="container-p1">
                   <picture class="container-answer">
-                     <img src='./img/shrek.jpg' alt="Shrek, el famoso personaje verde de la película animada">>
+                     <img src='./img/shrek.jpg' alt="Shrek, el famoso personaje verde de la película animada">
                   </picture>
                   <div class="container-answer">
                      <p class="p1">¿Cuál es el nombre del protagonista verde de la película?
@@ -139,7 +139,7 @@
                            <label>b) Humanos </label>
                         </div>
                         <div class="input-group">
-                           <input type="radio" value="3" value="Ogrps" name="p5" />
+                           <input type="radio"  value="Ogros" name="p5" />
                            <label>c) Ogros</label>
                         </div>
                         <div class="input-group">
