--- a/trivia.html
+++ b/trivia.html
@@ -170,7 +170,7 @@
             </div>
             <div class="modal-body">
 
-               <p id="totalCorrects"></p>
+               <p id="totalQuestions"></p>
                <p id="resultCorrects"></p>
                <p id="resultIncorrects"></p>
             </div>
